--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -1,6 +1,11 @@
-body {
+html, body {
     background-image: url("./images/Fond_galaxie.jpg");
+    height: 100vh; /* Assure que le body prend toute la hauteur */
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
+
 
 img {
     width: 75px;
@@ -9,22 +14,21 @@ img {
 
 #titre {
     color: #A0C4FF;
+    flex-grow: 1; /* Permet au titre de prendre l'espace restant */
     text-align: center;
     font-size: 75px;
 }
 
 .footer-container {
-    display: flex;
-    align-items: center; /* Aligne verticalement les éléments */
     background-color: #999999;
     padding: 10px 20px;
     width: 100%;
-    justify-content: space-between; /* Espacement entre le texte et les icônes */
+    display: flex;
+    justify-content: space-between;
 }
 
-.contact {
-    display: flex;
-    align-items: center; /* Assure que le texte est bien centré verticalement */
+.footer {
+    margin-top: 95px;
 }
 
 .social-icons {
@@ -33,8 +37,8 @@ img {
 }
 
 .logo {
-    width: 48px; /* Taille similaire au texte */
-    height: 48px;
+    width: 50px; /* Ajustez selon la taille souhaitée */
+    height: auto;
 }
 
 button {
@@ -44,10 +48,28 @@ button {
     border-radius: 50%;
 }
 
-#selection_jeu {
-    text-align: center;
+.game {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
 }
 
-#haut_de_page {
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Ajustez selon vos besoins */
+    padding: 10px;
+}
 
+.game_choose {
+    width: 450px;
+    height: auto;
+    margin-top: 90px;
+}
+
+.button_select {
+    width: 100px;
+    height: 100px;
+    font-size: 75px;
 }
