--- a/2048/2048.css
+++ b/2048/2048.css
@@ -1,51 +1,35 @@
+/* style.css */
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background-image: url("./IMG/fond_étoiler.jpeg");
+    background-size: cover;
 }
 
-hr {
-    width: 500px;
-}
-h2 {
-    display: inline-flex;
-    padding: 20px 100px ; /* Ajusté pour une meilleure taille */
-    justify-content: right;
-    align-items: center;
-
-    border-radius: 70px;
-    background: #FFF;
-}
-button {
-    display: inline-flex;
-    padding:  20px 100px; /* Ajusté pour une meilleure taille */
-    flex-direction: column; /* Empile les éléments internes */
-    align-items: center;
-    border-radius: 70px;
+h2, button {
+    display: block;
+    padding: 20px 50px;
+    border-radius: 15px;
     background: #FFF;
     cursor: pointer;
-    text-align: center;
+    margin: 10px auto;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    align-items: flex-end; /* Alignement à droite */
+    align-items: center;
     position: absolute;
-    top: 60px; /* Ajuste selon besoin */
-    right: 60px; /* Colle à droite */
-    gap: 0px; /* Espacement entre les éléments */
+    top: 20px;
+    right: 20px;
 }
 
 #board {
     width: 400px;
     height: 400px;
-
     background-color: #cdc1b5;
     border: 6px solid #bbada0;
-
-    
-    margin: 150px auto; 
+    margin: 100px auto;
     display: flex;
     flex-wrap: wrap;
 }
@@ -54,7 +38,6 @@ button {
     width: 90px;
     height: 90px;
     border: 5px solid #bbada0;
-
     font-size: 40px;
     font-weight: bold;
     display: flex;
@@ -62,70 +45,15 @@ button {
     align-items: center;
 }
 
-
-/* colored tiles */
-
-.x2 {
-    background-color: #eee4da;
-    color: #727371;
-}
-
-.x4 {
-    background-color: #ece0ca;
-    color: #727371;
-}
-
-.x8 {
-    background-color: #f4b17a;
-    color: white;
-}
-
-.x16{
-    background-color: #f59575;
-    color: white;
-}
-
-.x32{
-    background-color: #f57c5f;
-    color: white;
-}
-
-.x64{
-    background-color: #f65d3b;
-    color: white;
-}
-
-.x128{
-    background-color: #edce71;
-    color: white;
-}
-
-.x256{
-    background-color: #edcc63;
-    color: white;
-}
-
-.x512{
-    background-color: #edc651;
-    color: white;
-}
-
-.x1024{
-    background-color: #eec744;
-    color: white;
-}
-
-.x2048{
-    background-color: #ecc230;
-    color: white;
-}
-
-.x4096 {
-    background-color: #fe3d3d;
-    color: white;
-}
-
-.x8192 {
-    background-color: #ff2020;
-    color: white;
-}
+/* Tile colors */
+.x2 { background-color: #eee4da; color: #727371; }
+.x4 { background-color: #ece0ca; color: #727371; }
+.x8 { background-color: #f4b17a; color: white; }
+.x16 { background-color: #f59575; color: white; }
+.x32 { background-color: #f57c5f; color: white; }
+.x64 { background-color: #f65d3b; color: white; }
+.x128 { background-color: #edce71; color: white; }
+.x256 { background-color: #edcc63; color: white; }
+.x512 { background-color: #edc651; color: white; }
+.x1024 { background-color: #eec744; color: white; }
+.x2048 { background-color: #ecc230; color: white; }
