--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -49,10 +49,11 @@ button {
 }
 
 .game {
-    align-items: center;
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-grow: 1;
+    position: relative;
 }
 
 .header {
@@ -65,11 +66,40 @@ button {
 .game_choose {
     width: 450px;
     height: auto;
-    margin-top: 90px;
+    z-index: 1;
 }
 
 .button_select {
-    width: 100px;
-    height: 100px;
-    font-size: 75px;
+    width: 75px;
+    height: 75px;
+    font-size: 50px;
+    border-radius: 50%;
+    background-color: white;
+    color: black;
+    border: none;
+    cursor: pointer;
+}
+
+#game_title {
+    color: #A0C4FF;
+    text-align: center;
+}
+
+.game_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.button_container {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
 }
