--- a/dino/dino.css
+++ b/dino/dino.css
@@ -10,6 +10,17 @@ html, body {
     overflow: hidden;
 }
 
+#lives-display {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 18px;
+    color: #333;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px;
+    border-radius: 5px;
+}
+
 body {
     font-family: 'CustomFont', sans-serif;
     display: flex;
@@ -24,7 +35,7 @@ body {
 header {
     width: 100%;
     display: flex;
-    justify-content: flex-start; /* Align items to the left */
+    justify-content: flex-start;
     padding: 10px;
 }
 
@@ -81,9 +92,14 @@ header {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2vh; /* Hauteur du sol */
+    height: 2vh;
     background-image: url("texture/chemin_pierre.jpg");
     background-repeat: repeat;
+}
+
+.home-button {
+    margin-left: auto;
+    padding-right: 10px;
 }
 
 @keyframes moveCactus {
