--- a/Flappy_bird/flappy_bird.css
+++ b/Flappy_bird/flappy_bird.css
@@ -1,8 +1,112 @@
-html, body {
-    background-image: url("../Accueil/images/Fond_galaxie.jpg");
-}
-
 .logo {
-    width: 75px;
-    height: auto;
+
+    position: absolute;
+    top: 10px;         
+    left: 10px;      
+    width: 75px;   
+    height: auto;      
+    z-index: 1100;      
+}
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+    position: relative;
+}
+canvas {
+    border: 1px solid #000;
+    z-index: 1000;
+}
+.bgImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.button {
+    position: absolute;
+    top: 120px;
+    left: 50px;
+    width: 150px;
+    height: 70px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.rightPanel {
+    position: absolute;
+    top: 190px;
+    right: 200px;
+    width: 380px;
+    height: 700px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 25px;
+    font-weight: bold;
+}
+.inputField {
+    width: 80%;
+    padding: 10px;
+    margin: 30px 10px;
+    box-sizing: border-box;
+    font-size: 15px;
+}
+.sectionTitle {
+    margin: 30px 10px;
+    padding: 10px;
+}
+.difficultySwitch {
+    margin: 30px 10px;
+    padding: 10px;
+}
+.difficultySwitch select {
+    padding: 10px; /* Increased select field padding */
+    font-size: 18px; /* Increased font size */
+    width: 50%; /* Increased select width */
+    height: 40px; /* Increased select height */
+}
+.characterSelection {
+    margin: 30px 0;
+    padding: 10px;
+    text-align: center;
+}
+.characterButtons {
+    display: flex;
+    justify-content: center; 
+    gap: 10px; 
+}
+.characterButtons img {
+    width: 70px;
+    height: 70px;
+    margin: 5px;
+    cursor: pointer;
+}
+.imageBox {
+    width: 432px; /* 288px * 1.5 */
+    height: 670px; /* 512px * 1.5 */
+    border: 1px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFF;
+}
+.canvas {
+    width: 432px; /* 288px * 1.5 */
+    height: 670px; /* 512px * 1.5 */
+    border: 1px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFF;
+}
+.imageBox img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
