--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -121,6 +121,13 @@ button {
     right: 10px;
 }
 
+.a_propos {
+    width: 33.3%;
+    text-align: center;
+    font-size: 24px;
+
+}
+
 @media (max-width: 768px) {
     #titre {
         font-size: 6vw;
