--- a/Accueil/accueil.css
+++ b/Accueil/accueil.css
@@ -7,7 +7,12 @@ html, body {
     justify-content: space-between;
 }
 
-img {
+#logo {
+    width: 75px;
+    height: 75px;
+}
+
+.logo {
     width: 75px;
     height: 75px;
 }
